# 3DFin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-cc.yml  build-package.yml  build-standalone.yml  check-style.yml
code/: 3DFINconfig.ini  3DFin.py  3dFIN.py  config.ini  fin_ccplugin.py  functions.py  gui.py  gui_layout.py  main.py  main_with_gui.py  tooltip.py
code/gui/: gui_layout.py  tooltip.py
executable/: create_exe.txt
generate_exe/: options.spec
pyinstaller/: 3DFin.spec
qt-files/src/: .gitignore  3dfin_qt.pyproject  expert_dlg.ui  gui_ressources.qrc  main_window.ui
scripts/: pyinstaller_builder.py  qt_build_hook.py
src/hatch-qt/: build.py
src/hatch-qt/qtfiles/: .gitignore  3dfin_qt.pyproject  gui_ressources.qrc  main_window.ui
src/three_d_fin/: 3DFINconfig.ini  3DFinconfig.ini  __about__.py  __main__.py  fin_ccplugin.py
src/three_d_fin/assets/: 3dfin_color_scale.xml
src/three_d_fin/cloudcompare/: __init__.py  plugin.py  plugin_processing.py  plugin_progress.py
src/three_d_fin/gui/: .gitignore  application.py  gui_application.py  layout.py  processing.py  tooltip.py
src/three_d_fin/gui/qtfiles/: 3DFin.ui  3dfin_qt.pyproject  _3dfin_ressources.qrc
src/three_d_fin/processing/: __init__.py  abstract_processing.py  algorithm.py  configuration.py  io.py  progress.py  standalone_processing.py
tests/: lowerlimitchange.ini  test_configuration.py
