[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3DFin"
description = "Automatic dendrometry and forest inventory for terrestrial point clouds, application package"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["lidar", "forestry", "tls"]
authors = [
  { name = "Carlos Cabo", email = "carloscabo@uniovi.es" },
  { name = "Diego Laino", email = "diegolainor@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "laspy~=2.4.1",
  "lazrs~=0.5.0",
  "numpy>=1.24.0",
  "pandas~=2.0.0",
  "XlsxWriter~=3.1.0",
  "dendromatics~=0.2.0",
  "pydantic~=1.10.7",
  "PyQT5~=5.15"
]
dynamic = ["version"]

# Entry point for CloudCompare plugin
[project.entry-points."cloudcompare.plugins"]
3DFin = "three_d_fin.cloudcompare.plugin:ThreeDFinCC"

# Entry point for GUI and CLI
[project.scripts]
3DFin = "three_d_fin.processing:launch_application"

[tool.hatch.version]
path = "src/three_d_fin/__about__.py"

[project.urls]
Documentation = "https://github.com/3DFin/3DFin#README.md"
Issues = "https://github.com/3DFin/3DFin/issues"
Source = "https://github.com/3DFin/3DFin"

[tool.hatch.build.targets.wheel]
packages = ["src/three_d_fin"]

[tool.hatch.sdist.build]
exclude = ["generate_exe", "src/three_d_fin/assets", "src/hatch-qt", ".github"]

[tool.hatch.metadata]
allow-direct-references = false

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[tool.hatch.envs.default.scripts]
# test
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/three_d_fin/processing --cov=tests {args}"
no-cov = "cov --no-cov {args}"
# qt
qt-moc = [
  "pyuic5 {args} src/hatch-qt/qtfiles/main_window.ui -o src/three_d_fin/gui/main_window.py --import-from=three_d_fin.gui", 
  "pyuic5 {args} src/hatch-qt/qtfiles/expert_dlg.ui -o src/three_d_fin/gui/expert_dlg.py --import-from=three_d_fin.gui"
]
qt-ressource = "pyrcc5 {args} src/hatch-qt/qtfiles/gui_ressources.qrc -o src/three_d_fin/gui/gui_ressources_rc.py"
qt-all = ["qt-moc", "qt-ressource"]


[tool.hatch.build.targets.sdist.hooks.custom]
dependencies = ["PyQT5~=5.15"]
path = "src/hatch-qt/build.py"
src_folder = "src/hatch-qt/qtfiles"
dest_folder = "src/three_d_fin/gui"
import_from = "three_d_fin.gui" # TODO: it could be infered from dest_folder

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/three_d_fin/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.pyinstaller]
dependencies = ["pyinstaller"]

# hatch run pyinstaller:build
[tool.hatch.envs.pyinstaller.scripts]
build = ["qt-all", "pyinstaller generate_exe/options.spec"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["ruff>=0.0.261", "black>=23.3.0", "mypy>=1.2.0"]
[tool.hatch.envs.lint.scripts]
# static analysis with ruff
check-type = "mypy --install-types --non-interactive {args:src/three_d_fin tests}"
check-static = "ruff check {args:.}"
check-format = "black --check --diff --color {args:.}"
fix-static = "ruff --fix {args:.}"
fix-format = "black {args:.}"
check-all = ["check-static", "check-format"]
fix-all = ["fix-static", "fix-format", "check-all"]

[tool.ruff]
select = ["E", "W", "YTT", "PTH", "NPY", "RET", "PYI", "Q", "F", "B", "I", "D"]
target-version = "py310"
line-length = 88
# TODO: for now we ignore "Line too long error (E501)" 
# because our comments are too longs
# Black will take care of the line lenght in code anyway
ignore = [
  "E501",
  # Ignore docstring in public package and module
  "D100",
  "D104",
  # Blank line before class
  "D203",
  # multiline summary second line
  "D213",
]

[tool.ruff.isort]
known-first-party = ["three_d_fin"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.black]
line-length = 88
target-version = ["py310"]
